# ArtiTor

./: .gitignore  NOTICE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-bindings-gobley-vs-cffi.md
gradle/: libs.versions.toml
rust/arti-kmp-ffi/: Cargo.toml
rust/arti-kmp-ffi/.cargo/: config.toml
rust/arti-kmp-ffi/examples/: host_poc.rs
rust/arti-kmp-ffi/src/: lib.rs
tor/: build.gradle.kts  consumer-rules.pro
tor/src/androidInstrumentedTest/kotlin/com/yet/tor/: TorE2ETest.kt
tor/src/commonMain/kotlin/com/yet/tor/: ArtiTorClient.kt
tor/src/iosTest/kotlin/com/yet/tor/: TorIosE2ETest.kt
